updated html and js files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
 
 <form>
-  <input type="text" placeholder="Please input search term">
+  <input class="input" type="text" placeholder="Please input search term">
   <button type="button">Search</button>
   <button type="button">Clear</button>
 </form>
